# algo2

./: .gitignore  README.md
module1/task1/: task1.cpp
module1/task2/: a.out  task2.cpp
module1/task3/: task3.cpp
module1/task4/: main.cpp
module1/task5/: biginteger.h
module2/task1/: CMakeLists.txt  main.cpp  tests.cpp
module2/task1/include/: task1.h
module2/task1/src/: task1.cpp
module2/task2/: CMakeLists.txt  main.cpp  tests.cpp
module2/task2/include/: task2.h
module2/task2/src/: task2.cpp
module2/task3/: CMakeLists.txt  main.cpp  tests.cpp
module2/task3/include/: task3.h
module2/task3/src/: task3.cpp
module2/task4/: CMakeLists.txt  main.cpp  tests.cpp
module2/task4/include/: task4.h
module2/task4/src/: task4.cpp
module2/task5/: CMakeLists.txt  main.cpp  tests.cpp
module2/task5/include/: task5.h
module2/task5/src/: task5.cpp
module2/task6/: CMakeLists.txt  tests.cpp
module2/task6/include/: geometry.h
module3/task2/: CMakeLists.txt  main.cpp  tests.cpp
module3/task2/include/: task2.h
module3/task2/src/: task2.cpp
module3/task3/: CMakeLists.txt  main.cpp  tests.cpp
module3/task3/include/: task3.h
module3/task3/src/: task3.cpp
module3/task4/: CMakeLists.txt  main.cpp  tests.cpp
module3/task4/include/: task4.h
module3/task4/src/: task4.cpp
module3/task5/: CMakeLists.txt  main.cpp  tests.cpp
module3/task5/include/: task5.h
module3/task5/src/: task5.cpp
module3/taskA/: CMakeLists.txt  main.cpp  tests.cpp
module3/taskA/include/: task1.h
module3/taskA/src/: task1.cpp
module4/task1/: CMakeLists.txt  main.cpp  tests.cpp
module4/task1/include/: task1.h
module4/task1/src/: task1.cpp
module4/task2/: CMakeLists.txt  main.cpp  tests.cpp
module4/task2/include/: task2.h
module4/task2/src/: task2.cpp
module4/task3/: CMakeLists.txt  main.cpp  tests.cpp
module4/task3/include/: task3.h
module4/task3/src/: task3.cpp
module4/task4/: CMakeLists.txt  main.cpp  tests.cpp
module4/task4/include/: task4.h
module4/task4/src/: task4.cpp
